# azer

./: .gitignore  LICENSE  README.md  chatbot.py  data_extraction.py  dcf.py  financials_builder.py  main.py  metrics_extraction.py  pdf_extractor.py  pyproject.toml  summary_generator.py
extracted_data/Aramco/Annual/: aramco_2021_annual.json  aramco_2023_annual.json  aramco_2024_annual.json  aramco_2025_annual.json  aramco_fy_2022.json  aramco_fy_2024.json
extracted_data/Aramco/Quarterly/: aramco_2026_q1.json  aramco_q1_2025.json  aramco_q2_2025.json  aramco_q3_2025.json
extracted_data/Meta/Annual/: meta_2022_annual.json  meta_2024_annual.json  meta_2025_annual.json  meta_fy_2021.json  meta_fy_2023.json
extracted_data/Meta/Quarterly/: meta_2026_q1.json  meta_q1_2025.json  meta_q2_2025.json  meta_q3_2025.json
extracted_data/STC/Annual/: stc_fy_2021.json  stc_fy_2022.json  stc_fy_2023.json  stc_fy_2024.json  stc_fy_2025.json
extracted_data/STC/Quarterly/: stc_q1_2026.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx  SectionHeader.jsx  SummaryCard.jsx  UploadModal.jsx
frontend/src/pages/: Chat.jsx  DCF.jsx  Dashboard.jsx  Glossary.jsx  Home.jsx  MyDocuments.jsx
frontend/src/styles/: global.css
summaries/: Aramco_summary.json  Meta_summary.json  STC_summary.json
