[project]
name = "azer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.109.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "yfinance>=1.4.1",
]
